<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_sign">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_margin_top"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/sign_tv_color"
        android:textFontWeight="600"
        android:textSize="@dimen/sign_tv_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_rectangle_tv"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textAutoComplete"
        android:maxLength="30"
        android:textFontWeight="500"
        android:textSize="11sp"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signIn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_rectangle_tv"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textAutoComplete"
        android:maxLength="30"
        android:textFontWeight="500"
        android:textSize="11sp"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_rectangle_tv"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textFontWeight="500"
        android:textSize="11sp"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_button_main"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_hav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/already_have_an_account"
        android:textColor="#808080"
        android:textFontWeight="500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/log_in"
        android:textColor="#254FE6"
        android:textFontWeight="500"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/already_hav"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_hav"
        app:srcCompat="@drawable/google_sign" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_wit_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toTopOf="@+id/iv_google" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_google"
        app:srcCompat="@drawable/apple_sign" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_wit_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_apple"
        app:layout_constraintStart_toStartOf="@+id/sign_in_wit_google"
        app:layout_constraintTop_toTopOf="@+id/iv_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>